--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Calligraffiti&family=Finger+Paint&family=Lacquer&Indie+Flower&family=Sedgwick+Ave+Display&family=Permanent+Marker&family=Rock+Salt&family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <title>The Road Less Boring</title>
   </head>
   <body>
